src/theme-gcwu-fegc/sass/includes/default-mobile.scss
/* ... */
.ui-mobile #wb-sec{
	display:none;
}

.wet-boew-menubar a{
	border-top:1px solid #ccc;
	border-bottom:1px solid #ccc;
	color:#222;
	text-decoration:none;
	display:block;
	position:relative;
	z-index:200;
	font-weight:700;
	text-align:center;
	background:#eee;
	padding:0.8em 0 0.9em;
}

.wet-boew-menubar ul{
	list-style-type:none;
	position:relative;
	z-index:1;
	margin:0;
	padding:0;
}

.wet-boew-menubar li h3{
	font-weight:400;
	font-size:1em;
	margin:0;
	padding:0;
}

.wet-boew-menubar li{
	color:#333;
	text-shadow:0 1px 0 #fff;
	position:relative;
	z-index:1;
}

#gcwu-bnr,#wb-core{
	clear:both;
}

#gcwu-psnb,#gcwu-srchbx{
	width:50%;
	float:right;
	border-top:1px solid #044062;
}

#gcwu-priorities ul:after,#gcwu-date-mod:after,#gcwu-gcft ul:after,#wb-head:after{
	content:".";
	display:block;
	height:0;
	clear:both;
	visibility:hidden;
}

.ui-mobile .ui-content{
	padding:0 15px;
}

#wb-main-in .span-1,#wb-main-in .span-2,#wb-main-in .span-3,#wb-main-in .span-4,#wb-main-in .span-5,#wb-main-in .span-6,#wb-main-in .span-7,#wb-main-in .span-8,#wb-main-in .span-9,#wb-main-in .span-10,#wb-main-in .span-11,#wb-main-in .span-12{
	margin-bottom:20px;
}

.ui-mobile .wet-boew-menubar a{
	padding:0;
}

.wet-boew-menubar li .mb-sm,#gcwu-bc,#gcwu-psnb #gcwu-psnb-in,#gcwu-srchbx form,.wet-boew-menubar li .mb-sm *{
	display:none;
}

#gcwu-srch-submit{
	min-height: 22px;
}

.ui-content .ui-listview {
    margin: 0 -15px;
}

.ui-collapsible-heading, .ui-li-static {
	font-size:1em;
}

.ui-dialog h1 {
	border-bottom: none;
}

#jqm-wb-mb a:link{
	text-decoration: none
}

#jqm-wb-mb h3.top-section{
	font-size:1.2em;
}

#jqm-wb-mb .ui-content .ui-listview{
	margin:0;
}

#jqm-wb-mb .ui-btn-inner{
	white-space:normal;
}

#jqm-wb-mb .ui-btn-icon-top .ui-btn-inner{
	padding:0.6em 33px 0.7em 10px;
}

#jqm-wb-mb .ui-collapsible-set > a.ui-btn-icon-right .ui-btn-inner, #jqm-wb-mb .ui-btn a {
	padding-left: 40px;
}

#jqm-wb-mb .ui-body-a {
	background: #FFF;
}

#jqm-wb-mb .ui-collapsible .ui-collapsible .ui-collapsible-content {
	padding-bottom: 0;
}

#jqm-wb-mb .ui-li-static {
	border-left: none; border-right: none;
}

#jqm-wb-mb .ui-btn{
	margin:0;
	text-align:left;
}

#jqm-wb-mb .ui-li{
	padding: 0;
	border-width:1px 1px 0 1px;
}

#jqm-wb-mb .ui-corner-bottom {
	border-bottom-width:1px;
}

#jqm-wb-mb h1{
	border-bottom:none;
}

#jqm-wb-mb h2{
	color:#555;
}

#jqm-wb-mb div.ui-collapsible-set + h2{
	border-top:3px groove #fff;
	padding-top:8px;
	margin-top:23px;
}

#jqm-wb-mb .ui-content h2 + ul.ui-listview{
	margin-bottom:1em;
}

#jqm-wb-mb .top-section a{
	margin:0 0 5px;
	border-radius:0;
	-moz-border-radius:0;
	-webkit-border-radius:0;
}

#jqm-wb-mb .top-level.ui-btn-corner-all {
	border-radius:0.6em;
}

#gcwu-bnr{
	background:#4E7EB7;
	background: -moz-linear-gradient(#5383B7, #225C96) repeat scroll 0 0 #4E7EB7;
	background:-webkit-linear-gradient(#5383B7, #225C96) repeat scroll 0 0 #4E7EB7;
}

#jqm-wb-mb #gcwu-bc-in a {
	color: #326CA6;
	text-decoration: none;
	border-radius:0;
	-moz-border-radius:0;
	-webkit-border-radius:0;
}

#jqm-wb-mb #gcwu-bc-in a:hover,#jqm-wb-mb #gcwu-bc-in a:active{
	text-decoration:underline;
}

#jqm-wb-mb #gcwu-bc-in li:last-child {
	background-image: none;
	padding-left:5px;
}

#jqm-wb-mb #gcwu-bc-in li {
	background: url(../images/breadcrumb-mobile.png) no-repeat right center;
	display: inline;
	float: left;
	margin: 0;
	padding: 5px 12px 5px 5px;
	border-radius:0;
	-moz-border-radius:0;
	-webkit-border-radius:0;
}

#jqm-wb-mb #gcwu-bc-in ol:after {
	clear: both;
	content: ".";
	display: block;
	height: 0;
	visibility: hidden;
}

#jqm-wb-mb #gcwu-bc-in ol {
	line-height: 1.57em;
	list-style-type: none;
	margin: 0;
	padding: 0;
	font-size:90%;
}

#jqm-wb-mb #gcwu-bc-in{
	background:#DFDFDD;
	background:-webkit-linear-gradient(#F0EFEF, #DFDFDD) #DFDFDD;
	background:-moz-linear-gradient(#F0EFEF, #DFDFDD) #DFDFDD;
	color: #555;
	border-radius:0;
	-moz-border-radius:0;
	-webkit-border-radius:0;
	text-shadow:0 1px 1px #fff;
	border-bottom:1px solid #ccc;
	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
}

#jqm-mb-location-text h2{
	display:none;
}

#jqm-mb-location-text {
	margin:0 -15px 10px;
}

.mobile-hide{
	display:none !important;
}

.mobile-show{
	display:block !important;
}

a:active{
	text-decoration:underline !important;
}

.ui-btn-inner,.ui-li .ui-btn-text a.ui-link-inherit {
    white-space:normal !important;
}

.ui-loader-default h1{
    margin:0;
    padding:0;
    border:0;
}

.no-js #gcwu-sft{
	background:#eee;
	border-top:1px solid #ccc;
	padding:10px 10px 25px;
}

.no-js #wb-foot a{
	font-weight:400;
	text-decoration:none;
}

.no-js #wb-foot ul{
	list-style-type:none;
	margin:0;
}

.no-js #gcwu-srch{
	margin-top:3px;
	padding:3px 0;
}

.no-js #gcwu-psnb:hover #gcwu-psnb-in,.no-js #gcwu-srchbx:hover form{
	display:block;
	position:absolute;
	right:0;
	left:0;
	width:100%;
	margin-bottom:50px;
	z-index:100;
}

.no-js #gcwu-psnb li{
	border: 1px solid #222;
}

.no-js #gcwu-psnb a{
	color:#222;
	padding: 0.45em 0.79em;
}

.no-js #gcwu-srchbx:hover form{
	border-bottom:1px solid #999;
	text-align:center;
	background:#ccc;
	padding:10px 0;
}

.no-js #gcwu-sft-in section:nth-child(3n-1),.no-js #gcwu-sft-in div:nth-child(3n-1){
	clear:both;
}

.no-js #gcwu-sft-in div{
	width:50%;
	float:left;
}

.no-js #gcwu-sft:after{
	content:".";
	display:block;
	height:0;
	clear:both;
	visibility:hidden;
}

.no-js #gcwu-sft a,.no-js #gcwu-sft .link{
	color:#222;
}

.no-js .ui-content{
	padding:0;
}

.no-js .wb-sec-def h3.top-section a{
	color:#FFF;
	background:#23447e;
	padding-top:5px;
	padding-bottom:5px;
	font-size:1.1em;
}

.no-js #wb-sec{
	padding:0 5px;
}

.no-js .wb-sec-def h3.top-section a:hover,.no-js .wb-sec-def h3.top-section a:focus,.no-js .wb-sec-def h3.top-section a:active{
	color:#FFF;
	text-decoration:underline;
}

.no-js .wb-sec-def h3.top-section a.nav-current{
	color:#FFF;
	padding-top:4px;
	padding-bottom:4px;
	background:#0f315b;
}
/* ... */

